--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "polkadot-js"]
 	path = extensions/polkadot-js
-	url = https://github.com/ObsidianLabs/extension
+	url = https://github.com/ObsidianLabs/extension.git
 	branch = v0.24.1-electron
