--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "@obsidians/substrate-instances": "^0.1.0",
     "@obsidians/substrate-keypair": "^0.1.0",
     "@obsidians/substrate-node": "^0.1.0",
-    "@obsidians/substrate-project": "^0.1.0",
-    "@obsidians/substrate-welcome": "^0.1.0",
+    "@obsidians/substrate-project": "^0.1.1",
+    "@obsidians/substrate-welcome": "^0.1.1",
     "@obsidians/terminal": "^0.1.0",
-    "@obsidians/workspace": "^0.1.0",
+    "@obsidians/workspace": "^0.1.1",
     "@polkadot/extension-dapp": "^0.24.1",
     "fs-extra": "^8.1.0",
     "node-pty": "^0.9.0",
@@ -166,6 +166,7 @@
       ]
     },
     "linux": {
+      "icon": "./assets/icon.icns",
       "target": [
         "AppImage",
         "deb"
