--- a/package.json
+++ b/package.json
@@ -31,23 +31,6 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@obsidians/code-editor": "^0.1.0",
-    "@obsidians/file-ops": "^0.1.0",
-    "@obsidians/filetree": "^0.1.0",
-    "@obsidians/ipc": "^0.1.0",
-    "@obsidians/navbar": "^0.1.0",
-    "@obsidians/notification": "^0.1.0",
-    "@obsidians/pty": "^0.9.0",
-    "@obsidians/substrate-bottombar": "^0.1.0",
-    "@obsidians/substrate-compiler": "^0.1.0",
-    "@obsidians/substrate-header": "^0.1.0",
-    "@obsidians/substrate-instances": "^0.1.0",
-    "@obsidians/substrate-keypair": "^0.1.0",
-    "@obsidians/substrate-node": "^0.1.0",
-    "@obsidians/substrate-project": "^0.1.1",
-    "@obsidians/substrate-welcome": "^0.1.1",
-    "@obsidians/terminal": "^0.1.0",
-    "@obsidians/workspace": "^0.1.1",
     "@polkadot/extension-dapp": "^0.24.1",
     "fs-extra": "^8.1.0",
     "node-pty": "^0.9.0",
@@ -113,6 +96,10 @@
     "webpack-cli": "^3.3.9",
     "webpack-merge": "^4.2.2"
   },
+  "workspaces": [
+    "../electron-components/packages/*",
+    "../substrate-components/packages/*"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
