--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "phil.li@obsidians.io",
     "url": "https://obsidians.io"
   },
-  "license": "gpl-3.0",
+  "license": "GPL-3.0",
   "private": true,
   "homepage": "./",
   "main": "build/main/index.js",
