--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@polkadot/extension-dapp": "^0.24.1",
     "fs-extra": "^8.1.0",
     "node-pty": "^0.9.0",
+    "socket.io-client": "^3.0.5",
     "strip-ansi": "^6.0.0",
     "trash": "^6.0.0"
   },
