--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,7 +83,7 @@ jobs:
         with:
           ref: master
           path: ./studio
-      
+
       - name: Init submodule
         working-directory: ./studio
         run: git submodule update --init
@@ -104,6 +104,7 @@ jobs:
           mac_certs_password: ${{ secrets.certs_password }}
           windows_certs: ${{ secrets.certs }}
           windows_certs_password: ${{ secrets.certs_password }}
+          react_app_mixpanel_token: ${{ secrets.react_app_mixpanel_token }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload assets
